--- a/test-file-upload/src/main/resources/application.properties
+++ b/test-file-upload/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9293
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/streamanalyticsv1
+spring.datasource.url=jdbc:postgresql://localhost:5432/<dbname>
 spring.datasource.username=postgres
 spring.datasource.password=somepwd
 
